examples/negative/actor_row/send_no_actor_row.kai
# Negative fixture (#511 / actor row contract): `Actor.send`
# called from a fn with no `Actor[Msg]` in its row must be
# rejected with the effect-not-handled diagnostic naming the
# parametric label.

import actor

type Msg = M(Int)

fn send_one(p: Pid[Msg]) : Unit = {
  Actor.send(p, M(1))
}

fn main() : Int / Console = 0
